# unPDF

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
lib/: pdfium-linux-arm64.tgz  pdfium-linux-x64.tgz  pdfium-linux-x86.tgz  pdfium-mac-arm64.tgz  pdfium-win-arm64.tgz  pdfium-win-x64.tgz  pdfium-win-x86.tgz
pdf_extract/: cpdfium.pxd
pdfextract/: __init__.py  libpdf.pyx  table.py
scripts/: pdfium-unpack.sh
src/charminator/: __init__.py  core.pyx  cpdfium.pxd  table.py
tests/: test_pdf.py  test_performance.py
unpdf/: libpdf.c  libpdf.cp312-win_amd64.pyd
