[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = 'pdf-extract'
version = "1.0.0rc1"
requires-python = ">= 3.9"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
include = ["pdfextract"]

[tool.setuptools.exclude-package-data]
pdfextract = ["*.c", "*.pxd", "*.pyx"]

[tool.cibuildwheel]
skip = ["cp39-musllinux*", "cp310-musllinux*"]

linux.archs = ["x86_64", "aarch64"]
windows.archs = ["AMD64", "ARM64"]
macos.archs = ["arm64"]

test-command = "pytest {project}/tests"
test-requires = "pytest"

linux.repair-wheel-command = ""
windows.repair-wheel-command = ""
macos.environment = {REPAIR_LIBRARY_PATH = "lib/pdfium/lib/"}
macos.repair-wheel-command = "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
