[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "unPDF"
version = "1.0.0rc2"
requires-python = ">= 3.9"
description = "Quickly extract text characters and character metadata from pdfs using pdfium."
authors = [
    {name = "Laurens Janssen", email = "digi-deity@laurens.xyz"}
]
license = {text = "Apache-2.0"}
readme = "README.md"

[project.urls]
Repository = "https://github.com/digi-deity/unPDF"


[tool.setuptools.packages.find]
include = ["unpdf"]

[tool.setuptools.exclude-package-data]
pdfextract = ["*.c", "*.pxd", "*.pyx"]

[tool.cibuildwheel]
skip = ["cp39-musllinux*", "cp310-musllinux*"]

linux.archs = ["x86_64", "aarch64"]
windows.archs = ["AMD64", "ARM64"]
macos.archs = ["arm64"]

test-command = "pytest {project}/tests"
test-requires = ["pytest", "pyarrow"]

linux.repair-wheel-command = ""
windows.repair-wheel-command = ""
macos.environment = {REPAIR_LIBRARY_PATH = "lib/pdfium/lib/"}
macos.repair-wheel-command = "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
